# k4sidechain

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SidechainEngine.cpp  SidechainEngine.h  WaveformScope.cpp  WaveformScope.h
